# no-show-prediction

./: .gitignore  guidelines.md  index.html  pyproject.toml
app/: __init__.py  main.py
app/api/routers/: __init__.py  brazil_prediction.py  no_show_prediction.py
app/core/data_loaders/: base.py  brazil_loader.py  california_loader.py  factory.py
app/core/data_processors/: base.py  brazil_processor.py  california_processor.py  factory.py
app/core/evaluation/: metrics.py
app/core/feature_creators/: base.py  brazil_creator.py  california_creator.py  factory.py
app/core/models/: base.py  factory.py  random_forest.py  sklearn_base.py
app/utils/: __init__.py  config.py
frontend/src/: App.tsx
frontend/src/components/: Calendar.tsx  CalendarGrid.tsx  WeekView.tsx
medical-calendar/src/app/: AppointmentContext.tsx  globals.css  index.ts  index.tsx  layout.tsx  page.tsx
medical-calendar/src/app/Calendar/: AppointmentCard.tsx  CalendarGrid.tsx  CalendarHeader.tsx
medical-calendar/src/app/Modals/: ContextMenu.tsx
medical-calendar/src/app/components/: Toast.tsx
medical-calendar/src/app/contexts/: AppointmentContext.tsx
medical-calendar/src/app/hooks/: useContextMenu.ts
mockup/: mockup.html
models/: medical_noshow_params.joblib  medical_noshow_scaler_1_days.joblib  medical_noshow_scaler_3_days.joblib  medical_noshow_scaler_5_days.joblib  medical_noshow_scaler_7_days.joblib
scripts/: test_data_loading.py  train_brazil_model.py  train_model.py
src/models/: train_medical_noshow.py
src/utils/: weather_loader.py
(+12 files in other folders)
